--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-wheel
 uwsgi
 django-ninja
 django-extensions
@@ -7,7 +6,8 @@ arrow
 PyJWT
 django-cors-headers
 mysqlclient
-cryptography==37.0.4
+# cryptography==37.0.4
+cryptography
 requests
 redis
 loguru
