--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-uwsgi
+# Environment markers
+# https://stackoverflow.com/questions/29222269
+uwsgi; platform_system != "Windows"
+pick
 django-ninja
 django-extensions
 django
