--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,6 +9,7 @@
         "teclado.vscode-nginx-format",
         "ms-python.vscode-pylance",
         "ms-python.python",
+        "ms-python.black-formatter",
         "vscode-icons-team.vscode-icons"
     ]
 }
