--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,8 +5,7 @@
         "visualstudioexptteam.vscodeintellicode",
         "visualstudioexptteam.intellicode-api-usage-examples",
         "visualstudioexptteam.vscodeintellicode-completions",
-        "ahmadalli.vscode-nginx-conf",
-        "teclado.vscode-nginx-format",
+        "hangxingliu.vscode-nginx-conf-hint",
         "ms-python.vscode-pylance",
         "ms-python.python",
         "ms-python.black-formatter",
