--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     ],
     "python.analysis.addImport.exactMatchOnly": true,
     "python.analysis.autoFormatStrings": true,
+    "python.analysis.diagnosticMode": "openFilesOnly",
     "python.analysis.ignore": [
         "typings",
         "venv",
@@ -26,5 +27,13 @@
     "python.terminal.activateEnvInCurrentTerminal": true,
     "ruff.codeAction.disableRuleComment": {
         "enable": false
-    }
+    },
+    "todo-tree.filtering.excludeGlobs": [
+        "**/node_modules/*/**",
+        "venv"
+    ],
+    "todo-tree.highlights.enabled": false,
+    "files.watcherExclude": {
+        "venv": true
+    },
 }
