pylance report unbound variable

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,8 @@
         "reportShadowedImports": "information",
         "reportUnnecessaryComparison": "warning",
         "reportPrivateImportUsage": "none",
+        "reportUnboundVariable": "error",
+        "reportPossiblyUnboundVariable": "error",
     },
     "python.analysis.typeCheckingMode": "basic",
     "python.languageServer": "Pylance",
