--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
-*.log
+db.sqlite3
 *.pyc
+*.egg-info/
+build/
 venv/
+.venv/
+logs/
+typings/
+dist/
+media/
+!media/default_avatar.svg
+locale/**/*.mo
+reload.sh
+run.sh
 *.pid
 *.ini
-dist/
-media/*
-!media/default_avatar.svg
-run.sh
-typings
-logs
-db.sqlite3
-locale/**/*.mo
-uwsgi.reload
