--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "backend-template"
+name = "backend"
 version = "0.1.0"
 description = "A django-ninja backend template"
 dependencies = [
@@ -21,6 +21,19 @@ dependencies = [
 readme = "README.md"
 requires-python = ">= 3.10"
 
+[project.optional-dependencies]
+dev = [
+    "uv",
+    "ruff",
+    "rich",
+    "ipython",
+    "types-redis~=4.6.0",
+    "django-print-sql",
+]
+
+[tool.setuptools.packages.find]
+include = ["backend", "backend.*"]
+
 [tool.ruff]
 line-length = 160
 target-version = "py310"
@@ -30,6 +43,9 @@ ignore = [
     "F401", # unused-import
     "E402", # module-import-not-at-top-of-file
 ]
+
+[tool.uv.pip]
+index-url = "https://mirrors.aliyun.com/pypi/simple/"
 
 [[tool.rye.sources]]
 name = "aliyun"
