--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ requires-python = ">= 3.10"
 include = ["backend", "backend.*"]
 
 [tool.ruff]
-exclude = [".venv", "venv", "typings", "backend/apps/*/migrations"]
+extend-exclude = ["backend/apps/*/migrations"]
 line-length = 160
 target-version = "py310"
 
