--- a/requirements.txt
+++ b/requirements.txt
@@ -18,10 +18,4 @@ types-redis~=4.6.0
 loguru
 django-constance
 django-print-sql
-# django-crontab
-# django-rq
-# hashids
-# multiavatar
-# Pillow
-# qrcode
-# python-magic
+pytest-django
