--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "pick",
     "rich",
     "ipython",
+    "pydantic~=2.0",
     "django-ninja",
     "django-extensions",
     "django>=3.0",
