--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "loguru",
     "django-print-sql",
     "pytest-django",
+    "psutil>=6.0.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.10"
