Replace deprecated uv `index-url` to `index`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,10 @@ ignore = [
 
 [tool.uv]
 package = false
-index-url = "https://mirror.nju.edu.cn/pypi/web/simple"
+
+[[tool.uv.index]]
+url = "https://mirror.nju.edu.cn/pypi/web/simple"
+default = true
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "backend.settings"
