Enable workspace-only scan mode in todo-tree

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,4 +52,5 @@
     "python.languageServer": "Pylance",
     "python.terminal.activateEnvInCurrentTerminal": true,
     "todo-tree.highlights.enabled": false,
+    "todo-tree.tree.scanMode": "workspace only",
 }
