Ignore analysis for more libraries

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,10 @@
     "python.analysis.ignore": [
         "typings",
         ".venv",
+        "venv",
+        "**/node_modules",
+        "/usr/lib/python*/",
+        "*:\\**\\Python\\*\\Lib\\",
         "backend/apps/*/migrations",
     ],
     "python.analysis.inlayHints.functionReturnTypes": true,
