--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
     "rich",
     "ipython",
     "pydantic~=2.0",
-    "django-ninja",
+    "django-ninja>=1.4.0",
     "django-extensions",
     "django>=3.2",
     "arrow",
